--- a/app/components/popup-window/popup-labels/popup-labels.sass
+++ b/app/components/popup-window/popup-labels/popup-labels.sass
@@ -25,11 +25,13 @@
                     min-height: 45px
                     padding: 0
                     .title
+                        flex: 1 1 auto
                         width: 100%
                         input[type=text]
                             border: none
                             background-color: transparent
                     .chkwrap
+                        flex: 1 0 auto
                         display: none
                         width: 45px
                         min-width: 45px
@@ -37,6 +39,7 @@
                         line-height: 50px
                         text-align: center
                     button[name=remove]
+                        flex: 1 0 auto
                         line-height: 45px
                         width: 45px
                         opacity: 0
