--- a/app/components/view/header/header.sass
+++ b/app/components/view/header/header.sass
@@ -1,7 +1,7 @@
 @import '../../common'
 
 :host
-    display: block
+    display: flex
     box-sizing: border-box
     padding-top: $recipe_item_padding_top
     padding-bottom: $recipe_item_padding_bottom
@@ -15,6 +15,10 @@
     background-color: #fff
 
     input[type=text]
+        flex: 1 1 auto
+        width: 100%
+        height: 40px
+        line-height: 40px
         border: none
         font-size: 15px
         background-color: transparent
