--- a/app/components/view/view-item.sass
+++ b/app/components/view/view-item.sass
@@ -1,1 +1,17 @@
 @import '../common'
+
+button
+    flex: 1 0 auto
+    width: 45px
+    font-size: 13px
+    font-weight: 300
+
+button[name=trash]
+
+button[name=move]
+    position: absolute
+    left: 0
+    width: 20px
+    padding: 0
+    font-size: inherit
+    
