--- a/www/components/view/header/header.css
+++ b/www/components/view/header/header.css
@@ -1,5 +1,5 @@
 :host {
-  display: block;
+  display: flex;
   box-sizing: border-box;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -12,6 +12,10 @@
   font-weight: 300;
   background-color: #fff; }
   :host input[type=text] {
+    flex: 1 1 auto;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
     border: none;
     font-size: 15px;
     background-color: transparent; }
