add slip.js (sortable lib)

--- a/app/components/common.sass
+++ b/app/components/common.sass
@@ -40,6 +40,12 @@ $recipe_item_padding_bottom: 10px
 $recipe_item_padding_left: 20px
 $recipe_item_padding_right: 15px
 
+// popup-window
+$popup_win_padding_top: 6px
+$popup_win_padding_bottom: 6px
+$popup_win_padding_left: 15px
+$popup_win_padding_right: 15px
+
 // animation
 $transition_default: all 0.4s
 
